# rtl_transpiler

./: Cargo.toml  EXAMPLES.md  MCP_SERVER_USAGE.md  README.md  SYSTEMVERILOG_EXAMPLES.sv  build.rs  test_mcp_server.sh  test_mux.vhd  test_mux_fixed.v  test_systemverilog.sh  test_transpiler_fixes.sh
examples/: debug_architecture.rs  debug_counter.rs  test_counter_gen.rs  test_folder_transpile.rs  transpile_example.rs  transpile_with_arch.rs
src/: config.rs  constants.rs  lib.rs  mcp_stub.rs  utils.rs
src/agent/: alan_agent.rs  base.rs  basics.rs  mod.rs  transpiler_agent.rs
src/ir/: mod.rs  model.rs  systemverilog_gen.rs  verilog_gen.rs
src/llm/: basics.rs  client.rs  mock.rs  mod.rs  openai.rs
src/mcp/: example_cargo.txt  example_server.rs  mod.rs  rmcp_server.rs  server.rs  working_client.rs
src/parser/: ast_parser.rs  mod.rs  tree_sitter_vhdl.rs  vhdl.rs  vhdl_arch.rs
src/tools/: base.rs  bash.rs  edit.rs  mcp_tool.rs  mcp_tool_stub.rs  mod.rs  sequential_thinking.rs  task_done.rs  transpile.rs  transpile_folder.rs  vhdl_analyze.rs
tests/: integration_test.rs
tests/fixtures/: alu.vhd  axi_crossbar.vhd  counter.vhd  counter_with_arch.vhd  fifo.vhd  fsm_with_arch.vhd  memory_controller.vhd  pcie_endpoint.vhd  simple_alu_with_arch.vhd  spi_master.vhd  uart.vhd
tests/output/: alu.v  axi_crossbar.v  counter.v  counter_with_arch.v  fifo.v  fsm_with_arch.v  memory_controller.v  pcie_endpoint.v  simple_alu_with_arch.v  spi_master.v  uart.v
