[package]
name = "rtl_transpiler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP client for LLM APIs
reqwest = { version = "0.11", features = ["json", "blocking"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Tree-sitter for parsing
tree-sitter = "0.22"

# String obfuscation
obfstr = "0.4"

# Lazy static
lazy_static = "1.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Regex
regex = "1.10"

# Terminal colors
crossterm = "0.27"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
cc = "1.0"

[lib]
name = "rtl_transpiler"
path = "src/lib.rs"